--- a/HTTP_Server.ipynb
+++ b/HTTP_Server.ipynb
@@ -22,37 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the socket library provided by Python\n",
-    "\n",
-    "import socket"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# multiple threads\n",
-    "\n",
-    "import threading"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import socket\n",
+    "import threading  # multiple threads\n",
     "import time  "
    ]
   },
@@ -65,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +133,7 @@
     "            response_header= '%s%s%s%s%s%s%s%s%d%s' % ('Date: ',\n",
     "                                                       gmt_now,\n",
     "                                                       '\\r\\n',\n",
-    "                                                       'Server: localhost\\r\\n',\n",
+    "                                                       'Server: local\\r\\n',\n",
     "                                                       'Connection: close\\r\\n',\n",
     "                                                       'Accept-Ranges: bytes\\r\\n',\n",
     "                                                       'Content-Type: text/html; charset=UTF-8\\r\\n',\n",
@@ -187,10 +158,12 @@
     "            length = len(response_data)  \n",
     "            response_status = b'HTTP/1.0 301 Moved Permanently\\r\\n'\n",
     "            clientsocket.send(response_status) \n",
+    "            print(\"[301 Redirect Response]: \")\n",
+    "            print(response_status)\n",
     "            response_header= '%s%s%s%s%s%s%s%s%d%s' % ('Date: ',\n",
     "                                                       gmt_now,\n",
     "                                                       '\\r\\n',\n",
-    "                                                       'Server: localhost\\r\\n',\n",
+    "                                                       'Server: local\\r\\n',\n",
     "                                                       'Connection: close\\r\\n',\n",
     "                                                       'Location: http://127.0.0.1/get.html\\r\\n',\n",
     "                                                       'Content-Type: text/html\\r\\n',\n",
@@ -203,8 +176,8 @@
     "            clientsocket.send(b'\\r\\n') # to separate headers from body\n",
     "            clientsocket.send(response_data)  \n",
     "            \n",
-    "            print(\"[301 Redirect Response]: \")\n",
-    "            print(response_status)\n",
+    "#             print(\"[301 Redirect Response]: \")\n",
+    "#             print(response_status)\n",
     "            print(response_header_b)\n",
     "            print(response_data)\n",
     "            break\n",
@@ -217,7 +190,7 @@
     "            response_header= '%s%s%s%s%s%s%s%d%s' % ('Date: ',\n",
     "                                                     gmt_now,\n",
     "                                                     '\\r\\n',\n",
-    "                                                     'Server: localhost\\r\\n',\n",
+    "                                                     'Server: local\\r\\n',\n",
     "                                                     'Connection: close\\r\\n',\n",
     "                                                     'Content-Type: text/html; charset=UTF-8\\r\\n',\n",
     "                                                     'Content-Length: ',\n",
@@ -244,7 +217,7 @@
     "            response_header= '%s%s%s%s%s%s%s%d%s' % ('Date: ',\n",
     "                                                     gmt_now,\n",
     "                                                     '\\r\\n',\n",
-    "                                                     'Server: localhost\\r\\n',\n",
+    "                                                     'Server: local\\r\\n',\n",
     "                                                     'Connection: close\\r\\n',\n",
     "                                                     'Content-Type: text/html; charset=UTF-8\\r\\n',\n",
     "                                                     'Content-Length: ',\n",
@@ -255,6 +228,7 @@
     "            clientsocket.send(response_status)\n",
     "            clientsocket.send(response_header_b) \n",
     "            clientsocket.send(b'\\r\\n') # to separate headers from body\n",
+    "#             clientsocket.send(response_data)\n",
     "            \n",
     "            print(\"[HEAD]: \")\n",
     "            print(response_status)\n",
@@ -289,10 +263,10 @@
     "            response_data = data.encode(encoding=\"utf-8\")            \n",
     "            length = len(response_data)            \n",
     "            response_status = b'HTTP/1.0 200 OK\\r\\n'\n",
-    "            response_header= '%s%s%s%s%s%s%s%d%s' % ('Date: \\r\\n',\n",
+    "            response_header= '%s%s%s%s%s%s%s%d%s' % ('Date: ',\n",
     "                                                     gmt_now,\n",
     "                                                     '\\r\\n',\n",
-    "                                                     'Server: localhost\\r\\n',\n",
+    "                                                     'Server: local\\r\\n',\n",
     "                                                     'Connection: close\\r\\n',\n",
     "                                                     'Content-Type: text/html; charset=UTF-8\\r\\n',\n",
     "                                                     'Content-Length: ',\n",
@@ -333,65 +307,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accepted\n",
-      "Accepted\n",
-      "from client b'GET /head.html HTTP/1.1\\r\\nHost: 127.0.0.1\\r\\nConnection: keep-alive\\r\\nUpgrade-Insecure-Requests: 1\\r\\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36\\r\\nAccept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9\\r\\nPurpose: prefetch\\r\\nSec-Fetch-Site: none\\r\\nSec-Fetch-Mode: navigate\\r\\nSec-Fetch-User: ?1\\r\\nSec-Fetch-Dest: document\\r\\nAccept-Encoding: gzip, deflate, br\\r\\nAccept-Language: zh-TW,zh;q=0.9,en-US;q=0.8,en;q=0.7\\r\\n\\r\\n'\n",
-      "/head.html\n",
-      "[HEAD]: \n",
-      "b'HTTP/1.0 200 OK\\r\\n'\n",
-      "b'Date: Sat, 05 Dec 2020 12:45:16 UTC\\r\\nServer: localhost\\r\\nConnection: close\\r\\nContent-Type: text/html; charset=UTF-8\\r\\nContent-Length: 33\\r\\n'\n",
-      "from client b'GET /head.html HTTP/1.1\\r\\nHost: 127.0.0.1\\r\\nConnection: keep-alive\\r\\nUpgrade-Insecure-Requests: 1\\r\\nUser-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36\\r\\nAccept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9\\r\\nSec-Fetch-Site: none\\r\\nSec-Fetch-Mode: navigate\\r\\nSec-Fetch-User: ?1\\r\\nSec-Fetch-Dest: document\\r\\nAccept-Encoding: gzip, deflate, br\\r\\nAccept-Language: zh-TW,zh;q=0.9,en-US;q=0.8,en;q=0.7\\r\\n\\r\\n'\n",
-      "/head.html\n",
-      "[HEAD]: \n",
-      "b'HTTP/1.0 200 OK\\r\\n'\n",
-      "b'Date: Sat, 05 Dec 2020 12:45:16 UTC\\r\\nServer: localhost\\r\\nConnection: close\\r\\nContent-Type: text/html; charset=UTF-8\\r\\nContent-Length: 33\\r\\n'\n",
-      "Accepted\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-1157c05f5be8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# accept a new client and get it's information\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0;34m(\u001b[0m\u001b[0mclientsocket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maddress\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccept\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# create a new thread to serve this new client\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/miniconda3/lib/python3.8/socket.py\u001b[0m in \u001b[0;36maccept\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    290\u001b[0m         \u001b[0mFor\u001b[0m \u001b[0mIP\u001b[0m \u001b[0msockets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthe\u001b[0m \u001b[0maddress\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0ma\u001b[0m \u001b[0mpair\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhostaddr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    291\u001b[0m         \"\"\"\n\u001b[0;32m--> 292\u001b[0;31m         \u001b[0mfd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maddr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accept\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    293\u001b[0m         \u001b[0msock\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfamily\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproto\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfileno\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    294\u001b[0m         \u001b[0;31m# Issue #7995: if no default timeout is set and the listening\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# since at most we can serve many clients (5 in this example), we need a way to distinguish them \n",
-    "# as mentioned in the class, TCP use 4-tuple (src IP, dst IP, src port, dst port) to distinguish a socket\n",
-    "# we use accept() function to confirm that we connect to the client socket\n",
-    "# and accept() function will return the client's socket instance and IP\n",
     "# we need a loop to keep accepting new clients (until 5 clients are accepted)\n",
     "\n",
     "while True:\n",
     "    # accept a new client and get it's information\n",
     "    (clientsocket, address) = s.accept()\n",
     "    \n",
-    "    # create a new thread to serve this new client\n",
-    "    # after the thread is created, it will start to execute 'target' function with arguments 'args' \n",
+    "    # create a new thread to serve the new client\n",
     "    threading.Thread(target = serveClient, args = (clientsocket, address)).start()\n",
     "    \n",
     "    print(\"Accepted\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
