--- a/HTTP server/HTTP_Server.ipynb
+++ b/HTTP server/HTTP_Server.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TCP Socket Server\n",
-    "\n",
-    "Please google \"berkeley socket programming\" first. You can find a diagram that describes how to use socket. For a server, it includes the following steps. We will explain them one by one.\n",
+    "## HTTP Server by Angel Wang\n",
     "\n",
     "* socket\n",
     "* bind\n",
